--- a/Viz/www/demos/demo.css
+++ b/Viz/www/demos/demo.css
@@ -2,29 +2,15 @@ body {
   background-color: #F0F0F0;
   font-family: "Arial";
 }
-.hidden { display: none;}
-.box {
-  width: 300px;
-  margin: 0 20px 0 20px;
-}
-.box div, .box input {
-  border: 1px solid;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  width: 100%;
-  padding: 0px;
-  margin: 5px;
-}
-.box div {
-  border-color: grey;
-  height: 300px;
-  overflow: auto;
-}
-.box input {
-  height: 30px;
+.hidden { display: none !important;}
+
+.full-width {
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: initial;
 }
 
-.foo {
-
-
+.border-thin{
+  border: 1px solid rgba(10, 10, 10, 0.25);
 }
